--- a/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
@@ -26,13 +26,8 @@
         DisplayMode: =If(varDelta < 0 , DisplayMode.Disabled  ,DisplayMode.Edit)
         Height: =88
         Icon: =Icon.Check
-        OnSelect: |+
+        OnSelect: |
             =SubmitForm('Form Produção') ;
-            
-            UpdateContext({IdEspelhoatual: maiorIdEspelho});
-            Collect(Listaproducao,Filter(LancamentoProducao,IDEspelho > maiorIdEspelho));
-            UpdateContext({maiorIdEspelho: Max(Listaproducao,IDEspelho)});
-            
         PaddingBottom: =22
         PaddingLeft: =22
         PaddingRight: =22
