--- a/Levantamento de Perdas/Src/Tela_Detail_Perdas.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Detail_Perdas.fx.yaml
@@ -66,7 +66,7 @@
 
     DetailForm1perdas As formViewer:
         DataSource: =[@LancamentoPerdas]
-        Height: =888
+        Height: =1025
         Item: =BrowseGallery1perdas.Selected
         Width: =Parent.Width
         Y: =RectQuickActionBar2_1.Y + RectQuickActionBar2_1.Height
@@ -87,8 +87,11 @@
             ZIndex: =1
 
             DataCardKey1perdas As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(230, 230, 230, 1)
+                FontWeight: =FontWeight.Bold
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -99,9 +102,10 @@
                 ZIndex: =1
 
             DataCardValue1perdas As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                Fill: =RGBA(230, 230, 230, 1)
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
@@ -127,8 +131,11 @@
             ZIndex: =1
 
             DataCardKey2perdas As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(230, 230, 230, 1)
+                FontWeight: =FontWeight.Bold
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -139,9 +146,10 @@
                 ZIndex: =1
 
             DataCardValue2perdas As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                Fill: =RGBA(230, 230, 230, 1)
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
@@ -167,8 +175,11 @@
             ZIndex: =1
 
             DataCardKey3perda As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(230, 230, 230, 1)
+                FontWeight: =FontWeight.Bold
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -179,9 +190,10 @@
                 ZIndex: =1
 
             DataCardValue3perdas As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                Fill: =RGBA(230, 230, 230, 1)
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
@@ -207,8 +219,11 @@
             ZIndex: =1
 
             DataCardKey4_1 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(230, 230, 230, 1)
+                FontWeight: =FontWeight.Bold
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -219,9 +234,10 @@
                 ZIndex: =1
 
             DataCardValue4_1 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                Fill: =RGBA(230, 230, 230, 1)
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
@@ -247,8 +263,11 @@
             ZIndex: =1
 
             DataCardKey5_1 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(230, 230, 230, 1)
+                FontWeight: =FontWeight.Bold
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -259,9 +278,10 @@
                 ZIndex: =1
 
             DataCardValue5_1 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                Fill: =RGBA(230, 230, 230, 1)
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
@@ -287,8 +307,11 @@
             ZIndex: =1
 
             DataCardKey6_1 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(230, 230, 230, 1)
+                FontWeight: =FontWeight.Bold
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -299,9 +322,10 @@
                 ZIndex: =1
 
             DataCardValue6_1 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                Fill: =RGBA(230, 230, 230, 1)
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
@@ -327,8 +351,11 @@
             ZIndex: =1
 
             DataCardKey7_1 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(230, 230, 230, 1)
+                FontWeight: =FontWeight.Bold
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -339,9 +366,10 @@
                 ZIndex: =1
 
             DataCardValue7_1 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                Fill: =RGBA(230, 230, 230, 1)
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
@@ -367,8 +395,11 @@
             ZIndex: =1
 
             DataCardKey8_1 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(230, 230, 230, 1)
+                FontWeight: =FontWeight.Bold
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -379,9 +410,10 @@
                 ZIndex: =1
 
             DataCardValue8_1 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                Fill: =RGBA(230, 230, 230, 1)
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
