--- a/Levantamento de Perdas/Src/Tela_Inicial_app.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Inicial_app.fx.yaml
@@ -1,5 +1,6 @@
 Tela_Inicial_app As screen:
     BackgroundImage: =Transmissões_foto_bw
+    Fill: =RGBA(0, 0, 0, 1)
     ImagePosition: =ImagePosition.Fill
 
     Titulo_ini As label:
@@ -12,7 +13,7 @@ Tela_Inicial_app As screen:
         Size: =23
         Text: ="LEVANTAMENTO DE PERDAS - TRANSMISSÕES"
         Width: =640
-        ZIndex: =3
+        ZIndex: =1
 
     ComboBoxute_ini As combobox:
         DisplayFields: =["Result"]
@@ -26,7 +27,7 @@ Tela_Inicial_app As screen:
         Size: =21
         Width: =160
         Y: =Titulo_ini.Y + Titulo_ini.Height + 15
-        ZIndex: =4
+        ZIndex: =2
 
     ComboBoxmaquina_ini As combobox:
         DisplayFields: =["Result"]
@@ -42,7 +43,7 @@ Tela_Inicial_app As screen:
         Width: =250
         X: =ComboBoxute_ini.X+ComboBoxute_ini.Width+2
         Y: =ComboBoxute_ini.Y 
-        ZIndex: =5
+        ZIndex: =3
 
     Prod_Real_ini As text:
         Align: =Align.Center
@@ -57,16 +58,18 @@ Tela_Inicial_app As screen:
         Width: =200
         X: =Label_prod_real_ini.X + Label_prod_real_ini.Width + 30
         Y: =Label_resumo_ini.Y+ Label_resumo_ini.Height + 15
-        ZIndex: =10
+        ZIndex: =4
 
     Label_prod_real_ini As label:
-        Color: =RGBA(255, 255, 255, 1)
+        Align: =Align.Center
+        Fill: =RGBA(237, 237, 237, 1)
         Height: =57
         Size: =21
         Text: ="Produção Realizada"
-        Width: =320
+        Width: =340
+        X: =30
         Y: =Label_resumo_ini.Y+ Label_resumo_ini.Height + 15
-        ZIndex: =11
+        ZIndex: =5
 
     Label_resumo_ini As label:
         Align: =Align.Center
@@ -82,17 +85,18 @@ Tela_Inicial_app As screen:
         Width: =560
         X: =40
         Y: =DatePicker_ini.Y+ DatePicker_ini.Height + 20
-        ZIndex: =12
+        ZIndex: =6
 
     Label_perda_real_ini As label:
-        Color: =RGBA(255, 255, 255, 1)
+        Align: =Align.Center
+        Fill: =RGBA(230, 230, 230, 1)
         Height: =Label_prod_real_ini.Height
         Size: =21
         Text: ="Perdas Totais"
         Width: =Label_prod_real_ini.Width
         X: =Label_prod_real_ini.X
         Y: =Label_prod_real_ini.Y + Label_prod_real_ini.Height + 15
-        ZIndex: =13
+        ZIndex: =7
 
     Perda_Real_ini As text:
         Align: =Align.Center
@@ -107,17 +111,18 @@ Tela_Inicial_app As screen:
         Width: =Prod_Real_ini.Width
         X: =Prod_Real_ini.X
         Y: =Prod_Real_ini.Y + Prod_Real_ini.Height + 15
-        ZIndex: =14
+        ZIndex: =8
 
     Label_perda_real_ini_1 As label:
-        Color: =RGBA(255, 255, 255, 1)
+        Align: =Align.Center
+        Fill: =RGBA(230, 230, 230, 1)
         Height: =Label_perda_real_ini.Height
         Size: =21
         Text: ="Total Lançado"
         Width: =Label_perda_real_ini.Width
         X: =Label_perda_real_ini.X
         Y: =Label_perda_real_ini.Y + Label_perda_real_ini.Height + 15
-        ZIndex: =15
+        ZIndex: =9
 
     Total As text:
         Align: =Align.Center
@@ -128,7 +133,7 @@ Tela_Inicial_app As screen:
         Width: =Perda_Real_ini.Width
         X: =Perda_Real_ini.X
         Y: =Perda_Real_ini.Y + Perda_Real_ini.Height + 15
-        ZIndex: =16
+        ZIndex: =10
 
     Btn_lancar_prod As button:
         Height: =70
@@ -138,7 +143,7 @@ Tela_Inicial_app As screen:
         Width: =280
         X: =26
         Y: =1015
-        ZIndex: =17
+        ZIndex: =11
 
     Btn_lancar_perda As button:
         Height: =Btn_lancar_prod.Height
@@ -148,18 +153,18 @@ Tela_Inicial_app As screen:
         Width: =280
         X: =Btn_lancar_prod.X+ Btn_lancar_prod.Width + 27
         Y: =1015
-        ZIndex: =18
+        ZIndex: =12
 
     Label_perdanaoimpact_ini As label:
-        Color: =RGBA(255, 255, 255, 1)
-        Fill: =RGBA(0, 0, 0, 1)
+        Align: =Align.Center
+        Fill: =RGBA(230, 230, 230, 1)
         Height: =Label_perda_real_ini.Height
         Size: =21
         Text: ="Perdas não Impactam OEE"
         Width: =Label_perda_real_ini.Width
-        X: =11
+        X: =Label_perda_real_ini.X
         Y: =Label_resumo_ini_1.Y + Label_resumo_ini_1.Height +30
-        ZIndex: =19
+        ZIndex: =13
 
     Perdanaoimpact_ini As text:
         Align: =Align.Center
@@ -175,9 +180,9 @@ Tela_Inicial_app As screen:
         Height: =Perda_Real_ini.Height
         Size: =21
         Width: =Perda_Real_ini.Width
-        X: =361
+        X: =Label_perdanaoimpact_ini.X + Label_perdanaoimpact_ini.Width + 30
         Y: =Label_perdanaoimpact_ini.Y
-        ZIndex: =20
+        ZIndex: =14
 
     Label_resumo_ini_1 As label:
         Align: =Align.Center
@@ -192,18 +197,18 @@ Tela_Inicial_app As screen:
         Width: =560
         X: =40
         Y: =580
-        ZIndex: =21
+        ZIndex: =15
 
     Label_perdaimpact_ini As label:
-        Color: =RGBA(255, 255, 255, 1)
-        Fill: =RGBA(0, 0, 0, 1)
+        Align: =Align.Center
+        Fill: =RGBA(230, 230, 230, 1)
         Height: =Label_perda_real_ini.Height
         Size: =21
         Text: ="Perdas Impactam OEE"
         Width: =Label_perda_real_ini.Width
-        X: =11
+        X: =Label_perda_real_ini.X
         Y: =Label_perdanaoimpact_ini.Y + Label_perdanaoimpact_ini.Height + 25
-        ZIndex: =22
+        ZIndex: =16
 
     Perdaimpact_ini As text:
         Align: =Align.Center
@@ -212,20 +217,20 @@ Tela_Inicial_app As screen:
         Height: =Perda_Real_ini.Height
         Size: =21
         Width: =Perda_Real_ini.Width
-        X: =361
+        X: =Perdanaoimpact_ini.X
         Y: =Label_perdanaoimpact_ini.Y + Label_perdanaoimpact_ini.Height + 25
-        ZIndex: =23
+        ZIndex: =17
 
     Label_oee_ini As label:
-        Color: =RGBA(255, 255, 255, 1)
-        Fill: =RGBA(0, 0, 0, 1)
+        Align: =Align.Center
+        Fill: =RGBA(230, 230, 230, 1)
         Height: =Label_perda_real_ini.Height
         Size: =21
         Text: ="OEE"
         Width: =Label_perda_real_ini.Width
-        X: =11
+        X: =Label_perda_real_ini.X
         Y: =Label_perdaimpact_ini.Y + Label_perdaimpact_ini.Height + 25
-        ZIndex: =24
+        ZIndex: =18
 
     OEE_ini As text:
         Align: =Align.Center
@@ -234,9 +239,9 @@ Tela_Inicial_app As screen:
         Height: =Perda_Real_ini.Height
         Size: =21
         Width: =Perda_Real_ini.Width
-        X: =361
+        X: =Perdanaoimpact_ini.X
         Y: =Label_perdaimpact_ini.Y + Label_perdaimpact_ini.Height + 25
-        ZIndex: =25
+        ZIndex: =19
 
     Filtro_naoprevistoprod As text:
         Default: ="NÃO PREVISTO PRODUÇÃO"
@@ -245,7 +250,7 @@ Tela_Inicial_app As screen:
         Visible: =false
         Width: =182
         Y: =887
-        ZIndex: =26
+        ZIndex: =20
 
     Filtro_refeicao_intervalo As text:
         Default: ="REFEIÇÃO / INTERVALO"
@@ -255,7 +260,7 @@ Tela_Inicial_app As screen:
         Width: =150
         X: =261
         Y: =887
-        ZIndex: =27
+        ZIndex: =21
 
     Filtro_desbalanceamento As text:
         Default: ="NÃO PREVISTO PRODUÇÃO"
@@ -265,7 +270,7 @@ Tela_Inicial_app As screen:
         Width: =140
         X: =477
         Y: =868
-        ZIndex: =28
+        ZIndex: =22
 
     Icon2_1 As icon.Erase:
         Color: =RGBA(255, 255, 255, 1)
@@ -280,7 +285,7 @@ Tela_Inicial_app As screen:
         Width: =69
         X: =571
         Y: =45
-        ZIndex: =30
+        ZIndex: =23
 
     IconRefresh1_2 As icon.Reload:
         AccessibleLabel: =Self.Tooltip
@@ -295,7 +300,7 @@ Tela_Inicial_app As screen:
         Tooltip: ="Atualizar informações"
         Width: =69
         X: =571
-        ZIndex: =31
+        ZIndex: =24
 
     Btn_vis_lev_perdas As button:
         OnSelect: =Navigate(Tela_acerto_levantamento)
@@ -304,7 +309,7 @@ Tela_Inicial_app As screen:
         Width: =587
         X: =26
         Y: =956
-        ZIndex: =34
+        ZIndex: =25
 
     DatePicker_ini As datepicker:
         Height: =ComboBoxmaquina_ini.Height
@@ -312,7 +317,7 @@ Tela_Inicial_app As screen:
         Width: =220
         X: =ComboBoxmaquina_ini.X + ComboBoxmaquina_ini.Width + 4
         Y: =ComboBoxmaquina_ini.Y
-        ZIndex: =35
+        ZIndex: =26
 
     txt_date_ini As label:
         Height: =45
@@ -322,5 +327,5 @@ Tela_Inicial_app As screen:
         Width: =165
         X: =475
         Y: =198
-        ZIndex: =36
+        ZIndex: =27
 
