--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -92,10 +92,10 @@
     "DocumentType": "App",
     "EnableInstrumentation": false,
     "FileID": "c94859fd-2ebb-4cb5-abca-4ae066f946de",
-    "Id": "c94859fd-2ebb-4cb5-abca-4ae066f946de",
+    "Id": "3aaae7a9-6de1-4749-802c-2ff7999f4249",
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "{}",
-    "Name": "Levantamento de Perdas - Transmissões",
+    "Name": "Levantamento+de+Perdas+-+Transmiss%25c3%25b5es.msapp",
     "OriginatingVersion": "1.324"
   },
   "PublishInfo": {
