--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -81,7 +81,7 @@
     },
     "Author": "",
     "ContainsThirdPartyPcfControls": false,
-    "DefaultConnectedDataSourceMaxGetRowsCount": 2000,
+    "DefaultConnectedDataSourceMaxGetRowsCount": 1000,
     "DocumentAppType": "Phone",
     "DocumentLayoutHeight": 1136,
     "DocumentLayoutLockOrientation": false,
@@ -95,7 +95,7 @@
     "Id": "3aaae7a9-6de1-4749-802c-2ff7999f4249",
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "{}",
-    "Name": "Levantamento+de+Perdas+-+Transmiss%25c3%25b5es.msapp",
+    "Name": "Levantamento de Perdas - Transmissões",
     "OriginatingVersion": "1.324"
   },
   "PublishInfo": {
@@ -117,6 +117,7 @@
     "Tela_Detail_Perdas",
     "Tel_Edit_Producao",
     "Tel_Edit_Perdas",
-    "Tela_acerto_levantamento"
+    "Tela_acerto_levantamento",
+    "Caixa_Câmbio_2914_prod"
   ]
 }
