--- a/Levantamento de Perdas/Src/Tela_Detail_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Detail_Producao.fx.yaml
@@ -27,7 +27,8 @@
         Height: =88
         Icon: =Icon.Edit
         OnSelect: |
-            =EditForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None) ; Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & DataCardhora_inicio.Selected.Result) ; Set(varDelta , Cap_Produtiva - DataCardquantidade)
+            =EditForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None) ; Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & DataCardhora_inicio.Selected.Result) ; Set(varDelta , Cap_Produtiva - DataCardquantidade);
+            Set(varselect , Blank())
         PaddingBottom: =24
         PaddingLeft: =24
         PaddingRight: =24
@@ -86,8 +87,10 @@
             ZIndex: =1
 
             DataCardKey1 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(230, 230, 230, 1)
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -98,9 +101,10 @@
                 ZIndex: =1
 
             DataCardValue1 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                Fill: =RGBA(230, 230, 230, 1)
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
@@ -126,8 +130,10 @@
             ZIndex: =1
 
             DataCardKey2 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(230, 230, 230, 1)
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -138,9 +144,10 @@
                 ZIndex: =1
 
             DataCardValue2 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                Fill: =RGBA(230, 230, 230, 1)
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
@@ -166,8 +173,10 @@
             ZIndex: =1
 
             DataCardKey3 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(230, 230, 230, 1)
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -178,9 +187,10 @@
                 ZIndex: =1
 
             DataCardValue3 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                Fill: =RGBA(230, 230, 230, 1)
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
@@ -206,8 +216,10 @@
             ZIndex: =1
 
             DataCardKey4 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(230, 230, 230, 1)
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -218,9 +230,10 @@
                 ZIndex: =1
 
             DataCardValue4 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                Fill: =RGBA(230, 230, 230, 1)
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
@@ -246,8 +259,10 @@
             ZIndex: =1
 
             DataCardKey5 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(230, 230, 230, 1)
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -258,9 +273,10 @@
                 ZIndex: =1
 
             DataCardValue5 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                Fill: =RGBA(230, 230, 230, 1)
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
@@ -286,8 +302,10 @@
             ZIndex: =1
 
             DataCardKey6 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(230, 230, 230, 1)
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -298,9 +316,10 @@
                 ZIndex: =1
 
             DataCardValue6 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                Fill: =RGBA(230, 230, 230, 1)
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
@@ -326,8 +345,10 @@
             ZIndex: =1
 
             DataCardKey7 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(230, 230, 230, 1)
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -338,9 +359,10 @@
                 ZIndex: =1
 
             DataCardValue7 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                Fill: =RGBA(230, 230, 230, 1)
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
@@ -366,8 +388,10 @@
             ZIndex: =1
 
             DataCardKey8 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(230, 230, 230, 1)
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -378,9 +402,10 @@
                 ZIndex: =1
 
             DataCardValue8 As label:
+                Align: =Align.Center
                 AutoHeight: =true
-                Color: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                Fill: =RGBA(230, 230, 230, 1)
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
