--- a/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
@@ -630,7 +630,7 @@
                 ZIndex: =4
 
             DataCardtipo_de_peca As combobox:
-                DefaultSelectedItems: =LookUp(Distinct(LancamentoProducao,TIPO_DE_PECA).Result, Result = ThisItem.TIPO_DE_PECA)
+                DefaultSelectedItems: =LookUp(Distinct(CreatePeca,PECA).Result, Result = ThisItem.TIPO_DE_PECA)
                 DisplayFields: =["Result"]
                 Height: =70
                 InputTextPlaceholder: ="Selecione o tipo de peças"
